src/objects/Content__c.object
<CustomObject>
    <fields>
        <fullName>Alt_Text__c</fullName>
        <formula>Name &amp; &quot; &quot; &amp; &quot;Icon&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alt Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Button_Path__c</fullName>
        <inlineHelpText>If linking to internal pages, the syntax is /page?id=RECORD_ID</inlineHelpText>
        <label>Button URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Button_Text__c</fullName>
        <label>Button Display Text</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <description>technical name of class</description>
        <label>Class Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <description>The Atom Body (Formatting should be done here)</description>
        <inlineHelpText>The Atom Body (Formatting should be done here)</inlineHelpText>
        <label>Atom</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Current_Version__c</fullName>
        <formula>IF ( Version_Number__c &lt;&gt; VALUE( RIGHT(Updated_Version__c, 1) ), Updated_Version__c, IF ( AND((Version_Number__c = 0),(ISPICKVAL(Status__c, &quot;Draft&quot;))), &apos;Draft Version&apos;, 

IF ( AND((Version_Number__c = 0),(ISPICKVAL(Status__c, &quot;Draft: Submitted for Approval&quot;))), &apos;Draft Version&apos;, 

IF ( AND((Version_Number__c = 0),(ISPICKVAL(Status__c, &quot;Online&quot;))), &quot;Version 1&quot;, 

IF ( AND((Version_Number__c = 0),(ISPICKVAL(Status__c, &quot;Draft: Rejected&quot;))), &quot;Version 1&quot;, 

&quot;Version&quot; + &quot; &quot; + TEXT(Version_Number__c))))))</formula>
        <label>Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Title__c</fullName>
        <inlineHelpText>Public display title on the web. If this field is blank, the Atom Name can used as the display title.</inlineHelpText>
        <label>Atom Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <description>The API destination</description>
        <label>Source URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_Type__c</fullName>
        <description>Type of icon</description>
        <inlineHelpText>Select the type of icon you are adding to the Icon library.</inlineHelpText>
        <label>Icon Type</label>
        <picklist>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Image</label>
        <referenceTo>Image__c</referenceTo>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LMOV__c</fullName>
        <description>Roll-up Summary to find out the last &apos;Online&apos; Version of a Content/Atom.</description>
        <inlineHelpText>Roll-up Summary to find out the last &apos;Online&apos; Version of a Content/Atom.</inlineHelpText>
        <label>Last Modified Online Version</label>
        <summarizedField>Content_Version__c.LastModifiedDate</summarizedField>
        <summaryFilterItems>
            <field>Content_Version__c.Publishing_Status__c</field>
            <operation>equals</operation>
            <value>Online</value>
        </summaryFilterItems>
        <summaryForeignKey>Content_Version__c.Atom__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Series_Type__c</fullName>
        <label>Series Type</label>
        <picklist>
            <picklistValues>
                <fullName>Country Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic Guide to Exporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAQ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Publishing Status (Controlled by Atom Approval Process)</description>
        <inlineHelpText>Publishing Status</inlineHelpText>
        <label>Publishing Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Draft: Submitted for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft: Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Updated_Version__c</fullName>
        <description>Copying the latest Updated Version from Latest Content Version (Process Builder)</description>
        <label>Updated Version #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <description>Roll Summary &apos;Count&apos; of Number of &apos;Content Versions&apos; in Related List.</description>
        <inlineHelpText>Version Number</inlineHelpText>
        <label>Number of Versions</label>
        <summaryForeignKey>Content_Version__c.Atom__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>If Status = &apos;Draft&apos;, then Version = Draft Version
If Status = &apos;Draft: Submitted for Approval&apos;, then Version = &apos;Draft Version&apos;
If Status = &apos;Online&apos;, then Version = &apos;Version 1&apos;</description>
        <formula>IF ( AND((Version_Number__c = 0),(ISPICKVAL(Status__c, &quot;Draft&quot;))), &apos;Draft Version&apos;, 

IF ( AND((Version_Number__c = 0),(ISPICKVAL(Status__c, &quot;Draft: Submitted for Approval&quot;))), &apos;Draft Version&apos;, 

IF ( AND((Version_Number__c = 0),(ISPICKVAL(Status__c, &quot;Online&quot;))), &quot;Version 1&quot;,

IF ( AND((Version_Number__c = 0),(ISPICKVAL(Status__c, &quot;Draft: Rejected&quot;))), &quot;Version 1&quot;,

&quot;Version&quot; + &quot; &quot; + TEXT(Version_Number__c)))))</formula>
        <inlineHelpText>Version Number</inlineHelpText>
        <label>All Versions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>api_type__c</fullName>
        <label>api type</label>
        <picklist>
            <picklistValues>
                <fullName>trade events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>market research library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>trade leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>search</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Atom</label>
    <listViews>
        <fullName>APIs</fullName>
        <columns>NAME</columns>
        <columns>Display_Title__c</columns>
        <columns>api_type__c</columns>
        <columns>Endpoint__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Content__c.API</value>
        </filters>
        <label>APIs</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Display_Title__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Carousels</fullName>
        <columns>NAME</columns>
        <columns>Display_Title__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Content__c.Carousel</value>
        </filters>
        <label>Carousels</label>
    </listViews>
    <listViews>
        <fullName>Draft_Generic</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Content__c.Draft_Generic_Content</value>
        </filters>
        <label>Draft Generic</label>
    </listViews>
    <listViews>
        <fullName>Generic_Content</fullName>
        <columns>NAME</columns>
        <columns>Display_Title__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Content__c.RichText</value>
        </filters>
        <label>Generic Content</label>
    </listViews>
    <listViews>
        <fullName>Icon_Library</fullName>
        <columns>NAME</columns>
        <columns>Display_Title__c</columns>
        <columns>Icon_Type__c</columns>
        <columns>Alt_Text__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Class_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Content__c.Icon</value>
        </filters>
        <label>Icon Library</label>
    </listViews>
    <listViews>
        <fullName>My_Content</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Atoms</label>
    </listViews>
    <listViews>
        <fullName>Search</fullName>
        <columns>NAME</columns>
        <columns>Display_Title__c</columns>
        <columns>api_type__c</columns>
        <columns>Endpoint__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Content__c.API</value>
        </filters>
        <filters>
            <field>api_type__c</field>
            <operation>equals</operation>
            <value>search</value>
        </filters>
        <label>Search</label>
    </listViews>
    <listViews>
        <fullName>Series</fullName>
        <columns>NAME</columns>
        <columns>Display_Title__c</columns>
        <columns>Series_Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Content__c.Series_List</value>
        </filters>
        <label>Knowledge Series</label>
    </listViews>
    <listViews>
        <fullName>Video</fullName>
        <columns>NAME</columns>
        <columns>Display_Title__c</columns>
        <columns>api_type__c</columns>
        <columns>Endpoint__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Content__c.Video</value>
        </filters>
        <label>Video</label>
    </listViews>
    <listViews>
        <fullName>Web_Approvers_Content</fullName>
        <filterScope>Queue</filterScope>
        <label>Web Approvers</label>
        <queue>Web_Approvers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Atom Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Atoms</pluralLabel>
    <recordTypes>
        <fullName>API</fullName>
        <active>true</active>
        <description>Page information from other web sources (e.g. Events)</description>
        <label>API</label>
    </recordTypes>
    <recordTypes>
        <fullName>Carousel</fullName>
        <active>true</active>
        <description>Large images, with title and description, which slide across the page; aka Hero Box</description>
        <label>Carousel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Draft_Generic_Content</fullName>
        <active>true</active>
        <description>Generic Content Record type (Submit for Approval) --&gt; Text Record Type (Modify) - Only &apos;Modify&apos; button</description>
        <label>Draft Generic Content</label>
    </recordTypes>
    <recordTypes>
        <fullName>Icon</fullName>
        <active>true</active>
        <description>Icon Library</description>
        <label>Icon</label>
    </recordTypes>
    <recordTypes>
        <fullName>RichText</fullName>
        <active>true</active>
        <description>Basic display (Editable View) of an Atom - With &apos;Edit and &apos;Submit for Approval&apos; buttons</description>
        <label>Generic Content</label>
    </recordTypes>
    <recordTypes>
        <fullName>Series_List</fullName>
        <active>true</active>
        <description>List of Series by Type</description>
        <label>Series List</label>
    </recordTypes>
    <recordTypes>
        <fullName>Video</fullName>
        <active>true</active>
        <description>Video media which is stored on an external system; ex: You Tube or Vimeo</description>
        <label>Video</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>